fixed dashboard nav items was not showing

--- a/src/Styles/app.css
+++ b/src/Styles/app.css
@@ -1749,7 +1749,6 @@ input[type='checkbox']:checked+label>span:before {
 
 .dropdown-wrapper {
     position: relative;
-    display: none;
 }
 
 .button-menu {
